# dumux-braindiffusion-miniapp

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  cmake.opts  config.h.cmake  dumux-braindiffusion-miniapp.pc.in  dune.module  reconfigure.sh  requirements.txt  setup.sh
.github/workflows/: reuse.yml  test_install_compile.yml
app/: CMakeLists.txt  curvefit.cc  curvefit.input  main.cc  model.hh  params.input  plot.py
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
noise/: common.py  look_locker.py  mixed.py  plot_curvefits_look_locker.py  plot_noise_combined.py  plot_noise_look_locker.py  plot_noise_mixed.py  plot_noise_mixed_versus_look_locker.py
post/: map_to_mri.py  overlay.py  plot.py  plot_curvefit.py  plot_mapped_mpri.py  plot_mapped_mri.py  requirements.txt  vtk2mri.py
